fixed project desciprtion spacing

--- a/src/components/_project/project-description.module.scss
+++ b/src/components/_project/project-description.module.scss
@@ -2,8 +2,7 @@
 
 .ProjectDescription {
   background-color: $color-dove;
-  padding-top: 20px;
-  padding-bottom: 0px;
+
   .galleryWrap {
     display: flex;
     flex-direction: column;
@@ -25,6 +24,6 @@
   }
 
   .copyWrap {
-    padding: 50px 0px;
+    padding: 50px 0px 0px 0px;
   }
 }
